2005-01-20  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree.c (emft_copy_folders__desc): Added a description
	function for copying folders (so we don't get a "Working 0x..."
	status message).

	* mail-mt.c (do_op_status): Always g_free(what) since we always
	strdup it.

2005-01-20  Not Zed  <NotZed@Ximian.com>

	** See bug #55831.

	* evolution-mail.schemas.in.in: added open_many prompt key.

	* mail-errors.xml: added ask-open-many

	* em-folder-view.c (em_folder_view_open_selected): put back the
	'you're opening too many are you sure' thing.

2005-01-19  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-properties.c (emfp_get_folder_item): Increment i each
	time thru the loop or we lose widgets.

2005-01-19  Not Zed  <NotZed@Ximian.com>

	** See bug #66943.

	* em-composer-utils.c (save_draft_done): check if the
	editor_engine is still there before trying to invoke a method on
	it.
	(em_utils_composer_save_draft_cb): grab resources before getting
	the folder, so the composer doesn't go away.

2005-01-18  Rodrigo Moya <rodrigo@novell.com>

	* em-filter-source-element.c:
	* mail-config.c: removed e-url.h include.

2005-01-18  Not Zed  <NotZed@Ximian.com>

	** See bug #70768.

	* em-folder-browser.c (emfb_mark_all_read): get the uid list from
	the message-list (view) rather than folder (model).

	* message-list.c (message_list_foreach): removed, no longer used.
	(message_list_get_uids): new function replacing ml_foreach, get
	visible uids's of messages.

2005-01-18  Not Zed  <NotZed@Ximian.com>

	** See bug #71105.

	* em-folder-tree.c (emft_popup_rename_folder): dont let a user
	rename a folder to one including '/'.

	* em-format-html.c (emfh_gethttp): kill old 'load http 0 now=0' debug.

	** See bug #70563.

	* em-utils.c (emu_set_proxy, emu_proxy_setup)
	(em_utils_get_proxy_uri): make sure the init code is called from
	main thread (gconf usage), and add locking for data consistency.

2005-01-14  Not Zed  <NotZed@Ximian.com>
